objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Project_Sector__c</fullName>
        <label>Project Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <label>Project Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Behavior__c</fullName>
        <description>Capture the reason marketing qualified this lead to sales.  This is not a full history, but useful for sorting from lead views.</description>
        <label>Qualified Behavior</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number_of_Meters__c</fullName>
        <description>Number of meters collected for quote</description>
        <label>Quote Number of Meters</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_Noesis_User_Date__c</fullName>
        <description>Registered for the platform.</description>
        <label>Registered Noesis User Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registered_Noesis_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Noesis User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarket_Reason__c</fullName>
        <inlineHelpText>Enter the respective item that reflects the future prospective opportunity</inlineHelpText>
        <label>Remarket Reason</label>
        <picklist>
            <picklistValues>
                <fullName>International Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl Loc:Australia,New Zealand,Singapore, Guam, Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Limitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested but Good Future Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Constraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Re-org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Not a Good Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker is Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Non Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Finance Partnership Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy-Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Case_Study__c</fullName>
        <description>Requested case study coming form the energymanagement site</description>
        <label>Requested Case Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reraised__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this is not the first time this lead has been marketing qualified</description>
        <label>Reraised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <description>Custom field for Marketo integration</description>
        <label>SFDC Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_Status__c</fullName>
        <description>Custom field for Marketo Integration</description>
        <label>SFDC Campaign Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Coverage__c</fullName>
        <formula>IF(and(contains(&quot;Alaska:Alabama:Arkansas:Arizona:California:Colorado:Connecticut:Washington DC:Delaware:Florida:Georgia:Hawaii:Iowa:Idaho:Illinois:Indiana:Kansas:Kentucky:Louisiana:Massachusetts:Maryland:Maine:Michigan:Minnesota:Missouri:Mississippi:Montana:North Carolina:North Dakota:Nebraska:New Hampshire:New Jersey:New Mexico:Nevada:New York:Ohio:Oklahoma:Oregon:Pennsylvania:Rhode Island:South Carolina:South Dakota:Tennessee:Texas:Utah:Virginia:Vermont:Washington:Wisconsin:West Virginia:Wyoming:Puerto Rico:US Virgin Islands:Guam:Alberta:British Columbia:Manitoba:New Brunswick:Newfoundland:Northwest Territories:Nova Scotia:Ontario:Prince Edward Island:Quebec:Saskatchewan:Yukon&quot;,text(Company_Headquarter_State__c)),text(Company_Headquarter_State__c)&lt;&gt; &quot;India&quot;,text(Company_Headquarter_State__c)&lt;&gt; &quot;Republic of Georgia&quot;,text(Company_Headquarter_State__c)&lt;&gt; &quot;Virgin Islands&quot;,text(Company_Headquarter_State__c)&lt;&gt; &quot;Mexico&quot;), &quot;US / Canada&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle_In_Months__c</fullName>
        <label>Sales Cycle (In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <description>This section is where the Sales Team keeps current notes on the account. Most recent notes are at the top.</description>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Reps__c</fullName>
        <label># Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Technology_Owner__c</fullName>
        <formula>CASE(  Primary_Technology_Type__c , 
&quot;CO=Controls&quot;,&quot;Katrina&quot;, 
&quot;HV=HVAC&quot;,&quot;Katrina&quot;, 
&quot;DR=Deep Retrofit&quot;,&quot;Kerin&quot;, 
&quot;O=Other&quot;,&quot;Kerin&quot;, 
&quot;LI=Lighting&quot;,&quot;Matt&quot;, 
&quot;SO=Solar&quot;,&quot;Kerin&quot;,  
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Technology Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Owner__c</fullName>
        <formula>CASE( Company_Headquarter_State__c ,
&quot;Alabama&quot;,&quot;Katrina&quot;, 
&quot;Arkansas&quot;,&quot;Katrina&quot;,
&quot;Florida&quot;,&quot;Katrina&quot;,
&quot;Georgia&quot;,&quot;Katrina&quot;,
&quot;Kentucky&quot;,&quot;Katrina&quot;,
&quot;Louisiana&quot;,&quot;Katrina&quot;,
&quot;New York&quot;,&quot;Katrina&quot;,
&quot;Maryland&quot;,&quot;Katrina&quot;,
&quot;Mississippi&quot;,&quot;Katrina&quot;,
&quot;North Carolina&quot;,&quot;Katrina&quot;,
&quot;South Carolina&quot;,&quot;Katrina&quot;,
&quot;Tennessee&quot;,&quot;Katrina&quot;,
&quot;Virginia&quot;,&quot;Katrina&quot;,
&quot;Washington DC&quot;,&quot;Katrina&quot;,
&quot;West Virginia&quot;,&quot;Katrina&quot;,
&quot;Virgin Islands, U.S.&quot;,&quot;Katrina&quot;,
&quot;US Virgin Islands&quot;,&quot;Katrina&quot;,
&quot;Puerto Rico&quot;,&quot;Katrina&quot;,
&quot;Guam&quot;,&quot;Katrina&quot;,
&quot;Connecticut&quot;,&quot;Katrina&quot;, 
&quot;Delaware&quot;,&quot;Katrina&quot;,
&quot;Maine&quot;,&quot;Katrina&quot;,
&quot;Massachusetts&quot;,&quot;Katrina&quot;,
&quot;New Hampshire&quot;,&quot;Katrina&quot;,
&quot;New Jersey&quot;,&quot;Katrina&quot;,
&quot;Ohio&quot;,&quot;Colangelo&quot;,
&quot;Pennsylvania&quot;,&quot;Katrina&quot;,
&quot;Rhode Island&quot;,&quot;Katrina&quot;,
&quot;Vermont&quot;,&quot;Katrina&quot;,
&quot;Quebec&quot;,&quot;Colangelo&quot;,
&quot;Newfoundland&quot;,&quot;Colangelo&quot;,
&quot;Prince Edward Island&quot;,&quot;Colangelo&quot;,
&quot;New Brunswick&quot;,&quot;Colangelo&quot;,
&quot;Nova Scotia&quot;,&quot;Colangelo&quot;,
&quot;Illinois&quot;,&quot;Colangelo&quot;,
&quot;Indiana&quot;,&quot;Colangelo&quot;,
&quot;Iowa&quot;,&quot;Colangelo&quot;,
&quot;Kansas&quot;,&quot;Colangelo&quot;,
&quot;Michigan&quot;,&quot;Colangelo&quot;,
&quot;Minnesota&quot;,&quot;Colangelo&quot;,
&quot;Missouri&quot;,&quot;Colangelo&quot;,
&quot;Nebraska&quot;,&quot;Colangelo&quot;,
&quot;North Dakota&quot;,&quot;Roger&quot;,
&quot;Oklahoma&quot;,&quot;Colangelo&quot;,
&quot;South Dakota&quot;,&quot;Roger&quot;,
&quot;Texas&quot;,&quot;Colangelo&quot;,
&quot;Wisconsin&quot;,&quot;Colangelo&quot;,
&quot;Ontario&quot;,&quot;Katrina&quot;,
&quot;Manitoba&quot;,&quot;Roger&quot;,
&quot;Nunavut&quot;,&quot;Roger&quot;,
&quot;Northwest Territories&quot;,&quot;Roger&quot;,
&quot;Alaska&quot;,&quot;Roger&quot;,
&quot;Arizona&quot;,&quot;Roger&quot;,
&quot;California&quot;,&quot;Roger&quot;,
&quot;Colorado&quot;,&quot;Roger&quot;,
&quot;Hawaii&quot;,&quot;Roger&quot;,
&quot;Idaho&quot;,&quot;Roger&quot;,
&quot;Montana&quot;,&quot;Roger&quot;,
&quot;Nevada&quot;,&quot;Roger&quot;,
&quot;New Mexico&quot;,&quot;Roger&quot;,
&quot;Oregon&quot;,&quot;Roger&quot;,
&quot;Utah&quot;,&quot;Roger&quot;,
&quot;Washington&quot;,&quot;Roger&quot;,
&quot;Wyoming&quot;,&quot;Roger&quot;,
&quot;British Columbia&quot;,&quot;Roger&quot;,
&quot;Alberta&quot;,&quot;Roger&quot;,
&quot;Yukon&quot;,&quot;Roger&quot;,
&quot;Saskatchewan&quot;,&quot;Roger&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Side_Opt_In__c</fullName>
        <description>For marketing form wiring around sell side opt in question</description>
        <label>Sell Side Opt In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>select if business model is energy efficiency sell side business</inlineHelpText>
        <label>Sell Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of lead, used as a hidden field on Marketo forms</description>
        <label>Source</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Offers__c</fullName>
        <label>Special Offers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Lead_Index__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Lead Index</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targeted_Drip_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a lead is currently in the targeted flow</description>
        <label>Targeted Drip Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_of_Use_Version__c</fullName>
        <description>This is the Terms of Use version no. accepted by the Registrant.</description>
        <label>Terms of Use Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <inlineHelpText>select the respective timezone that the main phone number is located in and dial in compliance with state and federal laws</inlineHelpText>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI-UTC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Show__c</fullName>
        <description>Tradeshow dropdown list</description>
        <inlineHelpText>Select one if lead originated from a Tradeshow</inlineHelpText>
        <label>Trade Show</label>
        <picklist>
            <picklistValues>
                <fullName>AHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Globalcon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightfair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RealComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAA Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBCON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked yes if attended the webinar that is being processed</description>
        <label>Webinar Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Custom_Question_Answer__c</fullName>
        <description>Used by the webinar project</description>
        <label>Webinar Custom Question Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Name__c</fullName>
        <description>Used by the webinar project</description>
        <label>Webinar Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Poll_Answers__c</fullName>
        <description>Captures poll answers from webinars.  Used for Marketing processing only</description>
        <label>Webinar Poll Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_City__c</fullName>
        <description>Welcome Kit City</description>
        <label>Welcome Kit City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_State__c</fullName>
        <description>Welcome Kit State</description>
        <label>Welcome Kit State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Street__c</fullName>
        <description>Street address for welcome kit</description>
        <label>Welcome Kit Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Zip__c</fullName>
        <label>Welcome Kit Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <description>Years in business collected from marketing forms</description>
        <label>Years in Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>current_Project_Win_Rate__c</fullName>
        <label>Current Project Win Rate</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>deliverable__c</fullName>
        <label>deliverable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkt_project_cost__c</fullName>
        <label>mkt_project_cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkt_project_ecms__c</fullName>
        <label>mkt_project_ecms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkt_project_time_horizon__c</fullName>
        <label>mkt_project_time_horizon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_cmp_most_recent__c</fullName>
        <description>Tracking code: most recent value of CMP</description>
        <label>trk-cmp-most-recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_cmp_most_recent_dt__c</fullName>
        <description>Tracking code: date of most recent CMP</description>
        <label>trk-cmp-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_cmp_orig__c</fullName>
        <description>Original tracking code: campaign</description>
        <label>trk-cmp-orig</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_cmp_orig_dt__c</fullName>
        <description>Tracking Code - date of original CMP value</description>
        <label>trk-cmp-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_kwd_most_recent__c</fullName>
        <description>Tracking code: most recent value of KWD</description>
        <label>trk-kwd-most-recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_kwd_most_recent_dt__c</fullName>
        <description>Tracking code: date of most recent KWD</description>
        <label>trk-kwd-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_kwd_orig__c</fullName>
        <description>Original tracking code: keyword</description>
        <label>trk-kwd-orig</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_kwd_orig_dt__c</fullName>
        <description>Tracking code: date of original Keyword</description>
        <label>trk-kwd-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_med_most_recent__c</fullName>
        <description>Tracking code: most recent value of MED value</description>
        <label>trk-med-most-recent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_med_most_recent_dt__c</fullName>
        <description>Tracking code: date of most recent MED</description>
        <label>trk-med-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_med_orig__c</fullName>
        <description>Original tracking code: medium</description>
        <label>trk-med-orig</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_med_orig_dt__c</fullName>
        <description>Date of original tracking code: medium</description>
        <label>trk-med-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_src_most_recent__c</fullName>
        <description>Tracking code: most recent value of SRC</description>
        <label>trk-src-most-recent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_src_most_recent_dt__c</fullName>
        <description>Tracking code: date of most recent SRC</description>
        <label>trk-src-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_src_orig__c</fullName>
        <description>Original tracking code: source</description>
        <label>trk-src-orig</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_src_orig_dt__c</fullName>
        <description>Date of Original tracking code: Source</description>
        <label>trk-src-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_ver_most_recent__c</fullName>
        <description>Tracking code: most recent value of VER</description>
        <label>trk-ver-most-recent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_ver_most_recent_dt__c</fullName>
        <description>Tracking Code: date of most recent VER</description>
        <label>trk-ver-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_ver_orig__c</fullName>
        <description>Original tracking code: version</description>
        <label>trk-ver-orig</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_ver_orig_dt__c</fullName>
        <description>Tracking code: date of original VER value.</description>
        <label>trk-ver-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>welcomekitaddress__c</fullName>
        <description>Physical mailing address for welcome kit</description>
        <label>Welcome Kit Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>Finance_a_Project_Buy_Side_Leads2</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>Product_Lead_Type__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Company_Headquarter_State__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>Buy_Side__c</columns>
        <columns>Reraised__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Qualified_Behavior__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New Lead,Lead,Nurture,Remarket</value>
        </filters>
        <label>Finance a Project Buy Side Leads</label>
    </listViews>
</CustomObject>